--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="skill-row">
           <img class="carp" src="https://cdn-user-icons.flaticon.com/76253/76253717/1659549598294.svg?token=exp=1659550504~hmac=e49e56a8801787e25eac12f140ceed63" alt="">
           <h3>Carpentry</h3>
-          <p>Ever since i was young I was facinated with learning and mastering different skills, After graduating high school at the age of 18 I went into the field of construction because I had a goal of learning and having multipy different skills at my disposal</p>
+          <p>Ever since i was young I was facinated with learning and mastering different skills, After graduating high school at the age of 18 I went into the field of construction because I had a goal of learning and having multipy different skills at my disposal.</p>
         </div>
         <div class="skill-row">
           <img class="comp" src="https://cdn-user-icons.flaticon.com/76253/76253717/1659552654963.svg?token=exp=1659553566~hmac=32af4e4a06c2de92eba8be2ce4a7795d" alt="">
